...
                                    <constraint firstAttribute="height" constant="54" id="U63-Dv-Het"/>
                                </constraints>
                                <state key="normal" image="Get Started Button"/>
                                <connections>
                                    <action selector="buttonSegueToVCRecognition:" destination="BYZ-38-t0r" eventType="touchUpInside" id="avL-M2-Eeu"/>
...
                                    <constraint firstAttribute="height" constant="54" id="sAa-9l-mJg"/>
                                </constraints>
                                <state key="normal" image="RegisterButton"/>
                                <connections>
                                    <action selector="buttonSegueToVCRegister:" destination="ljf-he-QsI" eventType="touchUpInside" id="HPS-a1-mNd"/>
...
                                                <rect key="frame" x="0.0" y="0.0" width="330" height="77"/>
                                                <subviews>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email address" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9IJ-AU-nsT">
                                                        <rect key="frame" x="0.0" y="0.0" width="330" height="17"/>
                                                        <constraints>
...
                                                <rect key="frame" x="0.0" y="107" width="330" height="77"/>
                                                <subviews>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mkc-4X-Ncs">
                                                        <rect key="frame" x="0.0" y="0.0" width="330" height="17"/>
                                                        <constraints>
...
                                                    <constraint firstAttribute="width" constant="324" id="nIC-ke-XFr"/>
                                                </constraints>
                                                <state key="normal" image="RegisterButtonBig"/>
                                                <connections>
                                                    <action selector="buttonSegueToVCMainCatalog:" destination="kxM-Ru-tmL" eventType="touchUpInside" id="lrt-Yg-pyN"/>
...
                                                <rect key="frame" x="0.0" y="21" width="330" height="77"/>
                                                <subviews>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sfr-0P-aOq">
                                                        <rect key="frame" x="0.0" y="0.0" width="330" height="17"/>
                                                        <constraints>
...
